@@ -1,3 +1,4 @@
+	* supports complete_ago extension
 	* dropped zlib as a dependency and builds using puff.c instead
 	* made the default cache size depend on available physical RAM
 	* added flags to torrent::status() that can filter which values are calculated
